--- a/src/components/pull-to-refresh/style.less
+++ b/src/components/pull-to-refresh/style.less
@@ -3,15 +3,13 @@
   overflow-x: hidden;
   overflow-y: scroll;
   .dangosky-body {
-    overflow-x: hidden;
-    overflow-y: scroll;
+    transition: transform 1.3s ease;
   }
-  .dangosky-footer {
+  .dangosky-common {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 20px;
-    text-align: center;
     font-size: 14px;
     color: #8f959e;
     img {
@@ -19,8 +17,14 @@
       width: 16px;
       height: 16px;
     }
+  }
+  .dangosky-header {
+    .dangosky-common;
+  }
+  .dangosky-footer {
+    .dangosky-common;
     .icon-loading {
-      animation: icon-rotate 1s infinite normal linear;
+      // animation: icon-rotate 1s infinite normal linear;
     }
   }
 }
