feat: 下拉刷新逻辑V2
Change-Id: I368c77581d2f42c67af8e633a42008f515c49c43

--- a/src/components/pull-to-refresh/style.less
+++ b/src/components/pull-to-refresh/style.less
@@ -9,7 +9,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
     font-size: 14px;
     color: #8f959e;
     img {
@@ -20,11 +19,15 @@
   }
   .dangosky-header {
     .dangosky-common;
+    span {
+      margin-top: 20px;
+    }
   }
   .dangosky-footer {
     .dangosky-common;
+    margin-top: 20px;
     .icon-loading {
-      // animation: icon-rotate 1s infinite normal linear;
+      animation: icon-rotate 1s infinite normal linear;
     }
   }
 }
