--- a/src/components/pull-to-refresh/demo/style.less
+++ b/src/components/pull-to-refresh/demo/style.less
@@ -3,11 +3,16 @@
   padding: 0;
 }
 
+body {
+  background-color: #efeff4;
+}
+
 .container {
-  height: 500px;  // important
+  height: 100vh;  // important
 }
 
 .content {
+  background-color: #fff;
   p {
     height: 45px;
     line-height: 45px;
