--- a/src/components/pull-to-refresh/style.less
+++ b/src/components/pull-to-refresh/style.less
@@ -36,7 +36,7 @@
     }
   }
   // 使用 css 画箭头
-  &.status-pull-to-refresh,
+  &.status-pull-down-refresh,
   &.status-loosen-refresh {
     i {
       display: inline-block;
