--- a/src/components/pull-to-refresh/style.less
+++ b/src/components/pull-to-refresh/style.less
@@ -73,7 +73,7 @@
   }
   .dangosky-footer {
     .dangosky-common;
-    margin-top: 20px;
+    margin: 20px 0;
   }
   .icon-loading {
     animation: icon-rotate 1s infinite normal linear;
